# django-keysmith

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  runtests.py  zensical.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-test.yml  publish.yml
dev/: manage.py  settings.py  urls.py
dev/scripts/: token_auth_smoke.sh
dev/tokenlab/: admin.py  apps.py  models.py  plain_urls.py  plain_views.py  serializers.py  urls.py  views.py
dev/tokenlab/migrations/: 0001_initial.py
docs/: changelog.md  configuration.md  development.md  index.md  installation.md  quickstart.md  security-model.md
docs/api/: authentication.md  models.md  permissions.md  services.md
docs/guide/: audit-logging.md  authentication.md  permissions.md  token-management.md
docs/integration/: drf.md  plain-django.md
docs/stylesheets/: extra.css
keysmith/: __init__.py  admin.py  apps.py  checks.py  forms.py  hashers.py  hooks.py  models.py  settings.py  views.py
keysmith/audit/: logger.py
keysmith/auth/: base.py  drf.py  exceptions.py  http.py  utils.py
keysmith/auth/django/: decorator.py  middlware.py
keysmith/django/: __init__.py  decorator.py  middleware.py  permissions.py
keysmith/drf/: __init__.py  auth.py  permissions.py
keysmith/hashers/: __init__.py  base.py  pbkdf2.py  pbkdf2_sha256.py  pbkdf2_sha512.py  registry.py
keysmith/migrations/: 0001_initial.py  0002_remove_token_hint_and_add_created_action.py
keysmith/models/: __init__.py  audit.py  base.py  token.py  utils.py
keysmith/permissions/: decorator.py  drf.py
keysmith/services/: tokens.py
keysmith/templates/admin/keysmith/token/: token_created.html
keysmith/templates/keysmith/: base.html  token_detail.html  token_form.html  token_list.html
keysmith/utils/: tokens.py
tests/: __init__.py  apps.py  drf_urls.py  drf_views.py  manage.py  models.py  settings.py  test_audit.py  test_authentication.py  test_checks.py  test_django_integration.py  test_drf_integration.py  test_hashers.py  test_models.py  test_token_services.py  test_token_utils.py  urls.py  views.py
