[project]
name = "django-keysmith"
version = "0.1.1"
description = "A django application for API key management with rest-framework support"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "thekodeking", email = "nkrishnaraj.developer@gmail.com" }]
keywords = ["django", "keys", "management"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "django>=4.2.28",
]

[project.urls]
Homepage = "https://github.com/thekodeking/django-keysmith"
Issues = "https://github.com/thekodeking/django-keysmith/issues"
Repository = "https://github.com/thekodeking/django-keysmith"
Documentation = "https://thekodeking.github.io/django-keysmith/"

[project.optional-dependencies]
drf = ["djangorestframework>=3.15.2"]
docs = ["zensical"]
dev = [
  "black>=22.3.0",
  "django-stubs>=5.1.3",
  "djangorestframework-stubs>=3.15.1",
  "flake8>=4.0.1",
  "isort>=5.10.1",
  "mypy>=0.941",
  "pytest>=7.0.0",
  "pytest-django>=4.5.2",
  "ruff>=0.15.2",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py39"
line-length =100
fix = true
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]
ignore = [
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.isort]
known-first-party = ["keysmith"]
combine-as-imports = true

[tool.uv.build-backend]
module-name = "keysmith"
module-root = ""

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
